Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-8254

Compute stats fails if COMPRESSION_CODEC is not default

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • Impala 3.2.0
    • Backend
    • ghx-label-5

    Description

      To reproduce:
      set compression_codec=gzip;
      >COMPRESSION_CODEC set to gzip
      compute stats functional.alltypes;
      >Query: compute stats functional.alltypes
      >ERROR: Invalid compression codec: 2

      This kind of issue is typical with query options and compute stats - compute stats converts enums to their number representation, which is handled by most query options, see https://github.com/apache/impala/blob/adced30896ade0f71e64cc2d5bad1cd9f43119b7/be/src/service/query-options.cc#L532 for an example.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            fredyw Fredy Wijaya
            csringhofer Csaba Ringhofer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment